--- a/introduction_slides.ipynb
+++ b/introduction_slides.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -131,6 +130,24 @@
     }
    },
    "source": [
+    "# About Me\n",
+    "\n",
+    "* Ph.D. topic was ignition kinetics of alternative fuels\n",
+    "* Used rapid compression machine for experiments\n",
+    "* Became interested in experimental reproducibility\n",
+    "* Especially open-source data processing software\n",
+    "* CHEMKIN isn't open source and doesn't integrate with Python\n",
+    "* Cantera is both of those things"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Agenda"
    ]
   },
@@ -198,7 +215,7 @@
     }
    },
    "source": [
-    "* Google Group\n",
+    "* Google Group (https://groups.google.com/forum/#!forum/cantera-users)\n",
     "  * Email questions to the whole user group\n",
     "  * The developers watch this group pretty consistently\n",
     "  * New posters' messages are moderated\n",
@@ -229,6 +246,83 @@
    "source": [
     "* Documentation at http://cantera.org\n",
     "* Has examples and API documentation (we'll come back to this later)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Community Resources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Gitter Chat\n",
+    "  * https://gitter.im/Cantera/Lobby\n",
+    "  * Real-time chat\n",
+    "  * Developers do not closely monitor this list\n",
+    "  * Please direct all questions about Cantera code to the Users' Group"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Community Resources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Cantera source code is on GitHub\n",
+    "* https://github.com/Cantera/cantera\n",
+    "* File bug reports (please be detailed and specific)\n",
+    "* Create pull requests to merge your new code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Community Resources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Cantera is a fiscally-sponsored project under NumFOCUS\n",
+    "* NumFOCUS is a non-profit umbrella organization that provides support for open-source scientific software\n",
+    "* We would really appreciate your support for Cantera!\n",
+    "[![Powered by NumFOCUS](https://img.shields.io/badge/powered%20by-NumFOCUS-orange.svg?style=flat&colorA=E1523D&colorB=007D8A)](https://www.flipcause.com/secure/cause_pdetails/Mjk3MjU=)\n",
+    "<img src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fwww.flipcause.com%2Fsecure%2Fcause_pdetails%2FMjk3MjU%3D&chs=180x180&choe=UTF-8&chld=L|2' alt=''>"
    ]
   },
   {
@@ -539,6 +633,22 @@
     "\n",
     "![checks-finished](installation/checks-finished.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Cantera is participating in Google Summer of Code\n",
+    "\n",
+    "* Google Summer of Code (GSoC) is a summer program for University students\n",
+    "* We have a list of ideas that we're interested in pursuing\n",
+    "* These would be great starting projects, even if you don't do GSoC\n",
+    "* https://github.com/Cantera/cantera/wiki/GSoC-2018-Ideas"
+   ]
   }
  ],
  "metadata": {
@@ -547,6 +657,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
