--- a/0D_velocity_example.ipynb
+++ b/0D_velocity_example.ipynb
@@ -40,9 +40,9 @@
    "outputs": [],
    "source": [
     "import cantera as ct\n",
+    "%matplotlib ipympl\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "%matplotlib notebook"
+    "import numpy as np"
    ]
   },
   {
@@ -388,82 +388,6 @@
    },
    "source": [
     "Then, comparing all three pressure traces, we can see that the green variable volume simulation very closely approximates the behavior of the experimental pressure trace, including the compression stroke and post-compression behavior. User defined functions and classes, such as the one used to compute the velocity of the wall in this example, are very powerful in Cantera."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Perfectly Stirred Reactor Model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Another example where they are very useful is to construct a perfectly stirred reactor model with fixed residence time, rather than fixed mass flow rate (https://groups.google.com/d/msg/cantera-users/dMUhi5kVVDk/bDFYWMQsgbAJ)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gas = ct.Solution('h2o2.xml')\n",
-    "\n",
-    "gas.TPX = 300, ct.one_atm, 'H2:1.0, O2:2.0, AR:4.0'\n",
-    "upstream = ct.Reservoir(gas)\n",
-    "downstream = ct.Reservoir(gas)\n",
-    "\n",
-    "gas.equilibrate('HP')\n",
-    "r1 = ct.IdealGasReactor(gas)\n",
-    "\n",
-    "residence_time = 1e-4\n",
-    "\n",
-    "def mdot_out(t):\n",
-    "    return r1.mass / residence_time\n",
-    "\n",
-    "inlet = ct.Valve(upstream, r1, K=100)\n",
-    "outlet = ct.MassFlowController(r1, downstream)\n",
-    "outlet.set_mass_flow_rate(mdot_out)\n",
-    "\n",
-    "net = ct.ReactorNet([r1])\n",
-    "\n",
-    "t = np.linspace(0, 5*residence_time, 200)\n",
-    "T = np.zeros(t.shape)\n",
-    "mdot = np.zeros(t.shape)\n",
-    "for i,ti in enumerate(t):\n",
-    "    if ti:\n",
-    "        net.advance(ti)\n",
-    "    T[i] = r1.T\n",
-    "    mdot[i] = outlet.mdot(ti)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure('PSR Time vs. Temperature')\n",
-    "plt.plot(t, T)\n",
-    "plt.xlabel('Time [s]')\n",
-    "plt.ylabel('Temperature [K]');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure('PSR Time vs. Mass Flow Rate')\n",
-    "plt.plot(t, mdot)\n",
-    "plt.xlabel('Time [s]')\n",
-    "plt.ylabel('Mass Flow Rate [kg/s]');"
    ]
   }
  ],
