--- a/introduction_slides.ipynb
+++ b/introduction_slides.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -13,6 +13,24 @@
     "import gmaps\n",
     "gmaps.configure(api_key='AIzaSyDyT67CDIMJDFIMCtzVo7-oKHo781Y73Uc')\n",
     "import IPython"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# JupyterHub\n",
+    "\n",
+    "If you emailed me your GitHub username, go to \n",
+    "\n",
+    "https://weber-jupyter.uconn.edu\n",
+    "\n",
+    "Note: you need the s in https. Otherwise go to  \n",
+    "https://github.com/Cantera/essci-2018-materials"
    ]
   },
   {
@@ -45,14 +63,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7041998907a04369b1001ed029de9dc2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>Figure</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "Figure()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "location = (41.505864, -81.609031)\n",
     "gmaps.figure(center=location, zoom_level=12)"
@@ -92,14 +140,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=https://today.uconn.edu/2017/09/uconn-rises-18th-among-u-s-public-universities/ width=900 height=700></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "url = 'https://today.uconn.edu/2017/09/uconn-rises-18th-among-u-s-public-universities/'\n",
     "iframe = '<iframe src=' + url + ' width=900 height=700></iframe>'\n",
@@ -108,14 +170,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=https://me.engr.uconn.edu/blog/2017/10/23/new-faculty-openings/ width=900 height=700></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "url = 'https://me.engr.uconn.edu/blog/2017/10/23/new-faculty-openings/'\n",
     "iframe = '<iframe src=' + url + ' width=900 height=700></iframe>'\n",
